kubernetes/webhook/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webhook-system
  labels:
    name: webhook-system
